fix height camera 600px on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,6 +88,6 @@ footer {
 @media (max-width: 576px) {
   video {
     width: 100%;
-    height: 70vh;
+    height: 600px;
   }
 }
